# oasis-cli

./: .gitignore  Cargo.toml  README.md  Xargo.toml  build.rs
.circleci/: config.yml
.github/: CODEOWNERS
.github/workflows/: build.yml
src/: README.md  cli.rs  cmd_build.rs  command.rs  config.rs  dialogue.rs  dirs.rs  error.rs  errors.rs  help.rs  lib.rs  logger.rs  main.rs  path.rs  telemetry.rs  utils.rs  workspace.rs
src/subcommands/: build.rs  chain.rs  clean.rs  deploy.rs  ifextract.rs  init.rs  interface.rs  mod.rs  test.rs  toolchain.rs
tests/: .pylintrc  common.py  conftest.py  mock_telemetry_server.py  mock_tools_server.py  runner.sh  test_cmd_build.py  test_cmd_deploy.py  test_cmd_ifextract.py  test_cmd_set_toolchain.py  test_cmd_test.py  test_cmd_upload_metrics.py  test_config.py  test_toolchain.py  tests.sh
tests/res/: fixture.wasm  mock_tool.sh
tests/res/multiproj/: Cargo.toml
