[package]
name = "oasis-cli"
version = "0.1.0"
description = "Oasis developer tools"
authors = ["Oasis Labs <feedback@oasislabs.com>"]
edition = "2018"

[[bin]]
name = "oasis"
path = "src/main.rs"

[dependencies]
cargo_toml = "0.6"
chrono = "0.4"
clap = "2.33"
colored = "1.8"
dirs = "2.0"
env_logger = "0.6"
failure = "0.1"
flate2 = "1.0"
fs2 = "0.4"
git2 = "0.9"
log = "0.4"
mantle-rpc = { version = "0.1", features = ["import"] }
once_cell = "0.2"
rand = "0.7"
reqwest = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
toml = "0.5"
uuid = "0.7"
walrus = "0.8"

[build-dependencies]
reqwest = "0.9"
