[package]
name = "oasis-cli"
version = "0.1.7"
license = "Apache-2.0"
description = "Oasis developer tools"
authors = ["Oasis Labs <feedback@oasislabs.com>"]
repository = "https://github.com/oasislabs/oasis-cli.git"
readme = "README.md"
keywords = ["oasis"]
edition = "2018"
publish = false

[[bin]]
name = "oasis"
path = "src/main.rs"

[dependencies]
base64 = "0.10"
cfg-if = "0.1"
chrono = "0.4"
clap = "2.33"
colored = "1.8"
env_logger = "0.7"
failure = "0.1"
flate2 = "1.0"
fs2 = "0.4"
heck = "0.3"
hex = "0.4"
ignore = "0.4"
log = "0.4"
oasis-rpc = { version = "0.2", features = ["import"] }
once_cell = "1.2"
rand = "0.7"
reqwest = "0.9"
semver = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
toml = "0.5"
toml_edit = "0.1"
uuid = { version = "0.8", features = ["v4"] }
walkdir = "2.2"
walrus = "0.12"
xml-rs = "0.8"

[build-dependencies]
failure = "0.1"
semver = "0.9"

[profile.release]
lto = true
opt-level = 3
panic = "abort"
